@@ -137,7 +137,7 @@
     			<artifactId>maven-surefire-plugin</artifactId>
     			<version>3.5.2</version>
 				<configuration>
-        			<argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        			<argLine>-XX:+EnableDynamicAgentLoading -Dnet.bytebuddy.experimental=true</argLine>
     			</configuration>
 			</plugin>
 		</plugins>
